# echo

./: .gitignore  Makefile
backend/rust/echo_account/: Cargo.toml
backend/rust/echo_account/api/: health.rs  main.rs  router.rs
backend/rust/echo_account/api/accounts/: acceptor.rs  controller.rs  middleware.rs  mod.rs  presenter.rs  router.rs
backend/rust/echo_account/api/accounts/acceptors/: login.rs  signup.rs
backend/rust/echo_account/api/middleware/: authorization.rs  basic.rs  error.rs  mod.rs
backend/rust/echo_account/api/utility/: header.rs  route.rs
backend/rust/echo_account/cmd/: main.rs
backend/rust/echo_account/src/: lib.rs
backend/rust/echo_account/src/assembly/: setup.rs
backend/rust/echo_account/src/business/: account.rs  errors.rs  mod.rs  wrapper.rs
backend/rust/echo_account/src/business/accounts/: account.rs  account_conv.rs  builder.rs  conversion.rs  mod.rs  service.rs  signup_verification.rs
backend/rust/echo_account/src/caches/: account.rs  mod.rs  wrapper.rs
backend/rust/echo_account/src/caches/redis/: mod.rs  (+2 more)
backend/rust/echo_account/src/logger/: basic.rs
backend/rust/echo_account/src/queues/: email.rs  mod.rs  wrapper.rs
backend/rust/echo_account/src/stores/: account.rs  account_info.rs  account_test.rs  basic_account_info.rs  managed_account_info.rs  mod.rs  signup_verification.rs  wrapper.rs
backend/rust/echo_booth/: Cargo.toml
backend/rust/echo_booth/api/: main.rs
backend/rust/echo_booth/cmd/: main.rs
backend/rust/echo_booth/src/: lib.rs
backend/rust/echo_booth/src/assembly/: setup.rs
backend/rust/echo_booth/src/stores/: booth.rs  mod.rs  wrapper.rs
backend/rust/echo_jwt/: Cargo.toml
backend/rust/echo_jwt/src/: account.rs  config.rs  lib.rs
backend/rust/echo_sql/: Cargo.toml
backend/rust/echo_sql/src/: basic.rs  basic_test.rs  connection.rs  connection_test.rs  generic.rs  generic_test.rs  lib.rs  main.rs  table.rs
backend/rust/echo_sql/src/migrations/: 2_create_account.sql  2_createaccount.sql  3_create_product.sql  4_create_account_info.sql  4_createmanagedacoountinfo.sql  5_create_managed_account_info.sql  5_createbasicaccountinfo.sql  6_create_basic_account_info.sql  7_create_signup_verification.sql
backend/rust/echo_sql/src/models/: account.rs  basic_account_info.rs  managed_account_info.rs  mod.rs  product.rs
backend/rust/echo_sql/src/tables/: account.rs  account_info.rs  basic_account_info.rs  booth.rs  managed_account_info.rs  mod.rs  product.rs  signup_verification.rs
(+55 files in other folders)
