[package]
name = "echo_account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "account_api"
path = "api/main.rs"

[[bin]]
name = "account_cmd"
path = "cmd/main.rs"

[dependencies]
echo_sql = {path = "../echo_sql"}
echo_redis = {path = "../echo_redis"}
echo_rabbit = {path = "../echo_rabbit"}
echo_jwt = {path = "../echo_jwt"}

routerify = "3"
hyper = "0.14"

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "macros", "json" ]}

redis = { version = "0.25.3", features = ["tokio-comp", "json"] }

serde = { version = "1.0", features = ["derive"] }

serde_json = {version = "1.0", features = ["preserve_order"]}

bcrypt = {version = "0.15.1"}

rand = {version = "0.8.5"}

uuid = {version = "1.8.0", features = ["v4"]}
