[package]
name = "echo_booth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "booth_api"
path = "api/main.rs"

[[bin]]
name = "both_cmd"
path = "cmd/main.rs"

[dependencies]
echo_sql = {path = "../echo_sql"}

refinery = { version = "0.8", features = ["postgres"] }


tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "macros", "json" ]}

