[package]
name = "echo_jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt = {version = "0.16.0"}

hmac = {version = "0.12.1"}

sha2 = {version = "0.10.8"}

serde = { version = "1.0", features = ["derive"] }

chrono = "0.4"
